# gpio-timer

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  build.sh  go.mod  go.sh  go.sum  init.sh  main.cpp  main.go  run.sh
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
derbynet/: derbynet.go
gpio/: gpio.go
gpiod/: gpiod.go
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: gpio_test.cpp
